--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "ng serve --watch",
     "start-no-proxy": "ng serve --watch --disable-host-check",
     "build": "ng build --optimization=true --prod=true --sourceMap=false",
+    "build:lib": "browserify node_modules/async-mqtt/index.js -s mqtt > lib/browser-async-mqtt.js",
     "build-dev": "ng build",
     "deploy": "ng deploy --cname=dashboard.foxypool.cf --no-silent",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "npm run build:lib"
   },
   "private": true,
   "dependencies": {
@@ -36,7 +38,8 @@
     "humanize-duration": "^3.21.0",
     "moment": "^2.24.0",
     "ngx-echarts": "^4.2.2",
-    "peerjs": "^1.2.0",
+    "async-mqtt": "^2.5.0",
+    "shortid": "^2.2.15",
     "rxjs": "^6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
@@ -65,6 +68,7 @@
     "protractor": "^5.4.2",
     "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "browserify": "^16.5.0"
   }
 }
