--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "bootstrap": "^4.4.1",
+    "bignumber.js": "^9.0.0",
     "core-js": "^3.6.4",
     "echarts": "^4.6.0",
     "fuse.js": "^3.4.6",
