--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build": "ng build --optimization=true --prod=true --sourceMap=false",
     "build-dev": "ng build",
     "deploy": "npx vercel --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -49,25 +47,11 @@
     "@angular/cli": "^8.3.23",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
     "@types/echarts": "^4.4.2",
-    "@types/jasmine": "^3.5.1",
-    "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.1.8",
     "codelyzer": "^5.2.1",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.0",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "^5.4.2",
     "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
-    "typescript": "~3.5.3",
-    "browserify": "^16.5.0"
+    "typescript": "~3.5.3"
   }
 }
