--- a/package.json
+++ b/package.json
@@ -19,26 +19,22 @@
     "@angular/forms": "^8.2.14",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/pwa": "^0.803.23",
     "@angular/router": "^8.2.14",
     "@angular/service-worker": "^8.2.14",
-    "@fortawesome/angular-fontawesome": "^0.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.4.1",
-    "bignumber.js": "^9.0.0",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "axios": "^0.23.0",
+    "bignumber.js": "^9.0.1",
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.4",
-    "echarts": "^4.6.0",
-    "fuse.js": "^3.4.6",
-    "humanize-duration": "^3.21.0",
-    "moment": "^2.24.0",
-    "mongoose": "^5.10.0",
-    "ngx-echarts": "^4.2.2",
-    "shortid": "^2.2.15",
-    "rxjs": "^6.5.4",
-    "socket.io-client": "^4.1.2",
+    "echarts": "^5.2.1",
+    "moment": "^2.29.1",
+    "mongoose": "^6.0.11",
+    "ngx-echarts": "^7.0.2",
+    "rxjs": "^7.4.0",
+    "shortid": "^2.2.16",
     "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
   },
@@ -47,7 +43,7 @@
     "@angular/cli": "^8.3.23",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
-    "@types/echarts": "^4.4.2",
+    "@juggle/resize-observer": "^3.3.1",
     "@types/node": "^13.1.8",
     "codelyzer": "^5.2.1",
     "ts-node": "^8.6.2",
