--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --optimization=true --configuration production=true --sourceMap=false",
     "build-dev": "ng build",
     "deploy": "npx vercel --configuration production",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "lint:fix": "ng lint --fix"
   },
   "private": true,
   "dependencies": {
@@ -40,14 +41,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.10",
+    "@angular-eslint/builder": "12.5.0",
+    "@angular-eslint/eslint-plugin": "12.5.0",
+    "@angular-eslint/eslint-plugin-template": "12.5.0",
+    "@angular-eslint/schematics": "12.5.0",
+    "@angular-eslint/template-parser": "12.5.0",
     "@angular/cli": "^12.2.10",
     "@angular/compiler-cli": "^12.2.10",
     "@angular/language-service": "^12.2.10",
     "@juggle/resize-observer": "^3.3.1",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^14.17.27",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
     "ts-node": "^8.6.2",
-    "tslint": "~6.1.0",
     "typescript": "~4.3.5"
   }
 }
