--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --watch",
     "start-no-proxy": "ng serve --watch --disable-host-check",
-    "build": "ng build --optimization=true --configuration production=true --sourceMap=false",
+    "build": "ng build --configuration production --sourceMap=false",
     "build-dev": "ng build",
     "deploy": "npx vercel --configuration production",
     "lint": "ng lint",
